@@ -488,7 +488,13 @@ ged_search_core(struct ged *gedp, int argc, const char *argv_orig[])
     /* re-assemble search plan into a string - the db search functions break it out themselves */
     bu_vls_trunc(&search_string, 0);
     while (argv[plan_argv]) {
-	bu_vls_printf(&search_string, " %s", argv[plan_argv]);
+	// If any of the plans have spaces in them, we need to protect them for
+	// bu_argv_from_string processing
+	if (strchr(argv[plan_argv], ' ') != NULL) {
+	    bu_vls_printf(&search_string, " \"%s\"", argv[plan_argv]);
+	} else {
+	    bu_vls_printf(&search_string, " %s", argv[plan_argv]);
+	}
 	plan_argv++;
     }
 
