@@ -13,6 +13,7 @@ changes made.  See document footer for additional details.
 --- 202X-XX-XX  Release 7.36.0                                     ---
 ----------------------------------------------------------------------
 
+* Fixed search -attr behavior with names having spaces - Cliff Yapp
 * Updated OpenMesh library to version 9.0 - Cliff Yapp
 * Updated Open Asset Import Library - v5.2.5 + fix - Chris McGregor
 * Updated Tcl/Tk to version 8.6.13 - Cliff Yapp
